fix side nav menu on mobile

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -119,6 +119,14 @@ nav {
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 
+  .side-nav {
+    background-color: $text-dark;
+
+    a {
+      color: #fff;
+    }
+  }
+
   .logo {
     display: block;
     width: 100%;
@@ -164,6 +172,10 @@ nav {
 .dashboard > nav.is-visible {
   background-color: $text-dark;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+#sidenav-overlay {
+  z-index: 0;
 }
 
 .toucan-bg {
